@@ -1,3 +1,8 @@
+2015-04-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/tiff.c (WriteTIFFImage): Another change targeting
+	Coverity 44742 and 44746 "Unintended sign extension".
+
 2015-04-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/render.c (TracePath): Fix Coverity 10258 "Uninitialized
